--- a/package.json
+++ b/package.json
@@ -9,8 +9,10 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "tailwindcss": "^3.0.24",
-    "typescript": "^4.6.3"
+    "tailwindcss": "^3.0.24"
   },
-  "description": ""
+  "description": "",
+  "devDependencies": {
+    "typescript": "^4.6.4"
+  }
 }
